// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketView /> should have the hidden classes 1`] = `
<div
  class="page transition out fade right"
>
  <div
    class="ticketContent"
    tabindex="1"
  >
    <div>
      TicketBody
    </div>
  </div>
</div>
`;

exports[`<TicketView /> should not have the hidden classes 1`] = `
<div
  class="page"
>
  <div
    class="ticketContent"
    tabindex="1"
  >
    <div>
      TicketBody
    </div>
  </div>
</div>
`;
